# c_curved_space

./: README.md
ex/: keep.txt
futz/source/: CMakeLists.txt  gprof_hw.cpp
main/: 5_30_simulation_outline.txt  CMakeCache.txt  utils.cpp
main/baryshift/baryshift_source/: CMakeLists.txt  baryshift.cpp
main/classes/: .Simulation.h.swp  Simulation.cc  Simulation.h
main/draw_simple_mesh/: CMakeLists.txt  draw_simple_mesh.cpp  heightmap.off  readme.txt
main/draw_simple_mesh_build/: CMakeCache.txt
main/get_distance/: CMakeLists.txt  get_distance.cpp  multipoint_distance.cpp  shortest_paths.cpp  torus.off  using_locate.cpp
main/get_distance_build/: CMakeCache.txt  Makefile  cmake_install.cmake  get_distance  multipoint_distance  using_locate
main/get_force/: .get_force.cpp.swp  get_force.cpp
main/get_force_build/: CMakeCache.txt  Makefile  cmake_install.cmake  get_force
main/header_build/: CMakeCache.txt  Makefile  base  cmake_install.cmake
main/headertest/: CMakeLists.txt  base.cpp
main/shift/: .shift.cpp.swp  shift.cpp
main/shift_build/: CMakeCache.txt  Makefile  cmake_install.cmake  shift
main/shift_tests/baryshift_source/: .baryshift.cpp.swp  .full_baryshift.cpp.swp  CMakeLists.txt  baryshift.cpp  baryshift.cpp:Zone.Identifier  baryshift_true.cpp  full_baryshift.cpp  full_baryshift_draft2.cpp  utils.cpp  utils.h
main/sim_tests/sim_profiling/source/: .simulate.cpp.swp  CMakeLists.txt  force_dist_test.cpp  old_shift.cpp  shift.cpp  simulate.cpp  utils.h
main/simple_mesh/: .CMakeLists.txt.swp  .compute_normals.cpp.swp  .heightmap_mesh_remesh.cpp.swp  .torus_mesh.cpp.swp  CMakeLists.txt  compute_normals.cpp  heightmap_mesh.cpp  heightmap_mesh_remesh.cpp  simple_mesh.cpp  torus_mesh.cpp
main/simple_mesh_build/: CMakeCache.txt  Makefile  cmake_install.cmake  compute_normals  heightmap.off  heightmap_mesh  heightmap_mesh_remesh  heightmesh_isotropic_remesh.off  simple_mesh  simplified.off  simplified60.off  sphere.off  torus.off  torus_mesh  torusrb05.off  torusrb05.xyz  torusrb05normals.txt  torusrb07normals.txt  torusrb09normals.txt  torusrb12.xyz  torusrb12ab01normals.txt  torusrb12ab10.off  torusrb12ab20normals.txt  torusrb12ab5.off  (+4 more)
main/simulate/: .get_force.cpp.swp  CMakeLists.txt  get_force.cpp  get_force.h  shift.h  simulate.cpp
main/simulate/force_and_shift/: .get_force.cpp.swp  get_force.h  shift.h
meshes/: greedy_submesh.off
test/: CMakeLists.txt
test/archive/: README.txt
test/archive/shift/old/path_rotation/r_v_p_build/: CMakeCache.txt
test/archive/shift/old/path_rotation/r_v_p_source/: shift.cpp
test/archive/shift/old/unfolding/source/: pathbend_shift.cpp  u_shift_draft_1.cpp
test/archive/shift/source/: CMakeLists.txt
test/archive/sim_attempts/first_sim/archive/sim_debug/simulate_build/: CMakeCache.txt
test/archive/sim_attempts/first_sim/archive/sim_headers/simulate/: CMakeLists.txt
test/archive/sim_attempts/first_sim/archive/sim_headers/simulate/force_and_shift/: CMakeLists.txt  get_force.h
test/archive/sim_attempts/first_sim/archive/sim_headers/simulate_build/: cmake_install.cmake
test/archive/sim_attempts/first_sim/sim_new/sim_new_build/: Makefile
test/archive/sim_attempts/first_sim/sim_new/sim_new_source/: shift.h  u_shift.cpp
test/archive/sim_attempts/first_sim/sim_ssc/sim_ssc_build/: Makefile  ten_particles.xyz
test/archive/timing_pieces/: README.txt
test/archive/timing_pieces/tests_build/: Makefile  test_force  torusrb09.off  torusrb100ab30.off  torusrb12.off  torusrb20.off  torusrb50.off
test/archive/timing_pieces/tests_source/: test_shift.cpp
test/cgal_distance/source/: CMakeLists.txt  using_locate.cpp
test/component_tests/force/source/: .get_force.cpp.swp  .utils.cpp.swp  CMakeLists.txt  force_dist_test.cpp  force_per_target_test.cpp  get_force.cpp  get_force.h  make_geo.cpp  submesh_test.cpp  timed_force.cpp
test/component_tests/sampler/source/: .tor_sample.cpp.swp  CMakeLists.txt  sp_sample.cpp  tor_sample.cpp
test/component_tests/shift/source/: .shift.cpp.swp  .utils.cpp.swp  .vert_test.cpp.swp  CMakeLists.txt  angle_test.cpp  intersect_test.cpp  shift.cpp  shift.h  shifth.txt  throughVertexByAngle.txt  utils.cpp  utils.h  vert_test.cpp
test/force/source/: CMakeLists.txt  get_force.cpp
test/mesher/: README.txt
test/mesher/source/: CMakeLists.txt  compute_normals.cpp  heightmap_mesh.cpp  heightmap_mesh_remesh.cpp  sinplane_isotropic.cpp  sphere_mesh.cpp  sphere_triangulation_example.cpp  torus_mesh.cpp
test/primitives/: CMakeLists.txt  shift.h
test/shift/old/first_shift/source/: CMakeLists.txt
test/shift/old/path_rotation/: README.txt
test/shift/old/path_rotation/r_v_p_build/: Makefile  cmake_install.cmake  test
test/shift/old/unfolding/source/: CMakeLists.txt  rot_shift.cpp
test/sim_attempts/first_sim/archive/sim_debug/simulate_source/: simulate.cpp
test/sim_attempts/first_sim/sim_new/sim_new_source/: shift.cpp
test/sim_attempts/first_sim/sim_ssc/sim_ssc_source/: CMakeLists.txt
test/sim_functionality/first_sim/archive/sim_debug/simulate_source/: CMakeLists.txt  shift.cpp
test/sim_functionality/first_sim/archive/sim_headers/simulate/force_and_shift/: get_force.cpp  shift.h
test/sim_functionality/first_sim/archive/sim_headers/simulate_build/force_and_shift/: cmake_install.cmake
test/sim_functionality/first_sim/sim_new/sim_new_build/: two_pos.txt
test/sim_functionality/first_sim/sim_ssc/sim_ssc_source/: get_force.h
test/simulate/source/: .simulate.cpp.swp  CMakeLists.txt  cmake_install.cmake  force_dist_test.cpp  force_per_target_test.cpp  get_force.cpp  get_force.h  parallel_simulate.cpp  random_pos_simulate.cpp  seq_test.cpp  shift.cpp  shift.h  shift_test.cpp  simulate.cpp
test/testsrc/: CMakeLists.txt  get_force.cpp  shift.cpp
test/timing_pieces/tests_build/: cmake_install.cmake  test_shift
test/timing_pieces/tests_source/: CMakeLists.txt  test_force.cpp
test/util/: CMakeLists.txt
trajectories/: gaussianrep_10000steps_dt0001.csv  sinplane_GR_100pts_sim.csv  torusGR100pts.csv  torus_GR_100pts_sim.txt  torus_crystallization_100pts_sim.csv
(+182 files in other folders)
